# fast_zero

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
fast_zero/: app.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: d91d51099e7d_create_users_table.py  f20f5fea4f39_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
