[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [{ name = "w1zard", email = "jefferson@w1zard.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13.2,<2",
    "fastapi>=0.111.0,<0.136",
    "pydantic[email]>=2.7.4,<3",
    "pydantic-settings>=2.3.4,<3",
    "sqlalchemy>=2.0.31,<3",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<0.29",
    "pytest>=8.2.2,<10",
    "pytest-cov>=5.0.0,<8",
    "ruff>=0.15.10,<0.16",
    "taskipy>=1.13.0,<2",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[tool.setuptools]
packages = ["fast_zero"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
